--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "jsencrypt": "^3.2.1",
     "path": "^0.12.7",
     "store": "^2.0.12",
     "vue": "^2.6.11",
